--- a/main.css
+++ b/main.css
@@ -1,16 +1,235 @@
+/* GENERAL */
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     list-style-type: none;
+    font-family: 'Rubik', -apple-system, BlinkMacSystemFont,
+        "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
+    ;
 }
 
-.checked {
-    color: #ccc;
-    text-decoration: line-through;
-    font-style: italic;
+.backlayout {
+    /* outline: 10px solid red; */
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.phone {
+    position: relative;
+    z-index: 1;
+    width: 90vw;
+    height: 96vh;
+    background-color: #3C3C3C;
+    border: 3px solid green;
+    border-radius: 40px;
+    box-shadow: 0 4px 35px rgba(0, 0, 0, .1);
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+/* phone-top */
+.top-interface {
+    font-size: 80%;
+    padding: 0.8rem 1.8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#phoneTime {
+    font-weight: bold;
+    color: #93FF93;
+    margin-left: 1.5rem;
+}
+
+.icons {
+    /* outline: 3px solid red; */
+    display: flex;
+}
+
+.batterysink {
+    /* outline: 3px solid red; */
+    width: 3rem;
+    height: 1.2rem;
+    background-color: #000;
+    border-radius: 8px;
+    transform: translateX(20px);
+}
+
+.battery {
+    /* outline: 3px solid red; */
+    width: 2.5rem;
+    height: .9rem;
+    color: #fff;
+    background-color: #93ff93de;
+    border-radius: 6px;
+    transform: translate(-24px, 3px);
+    font-size: 10px;
+    padding: 1px 0 0 6px;
+}
+
+/* Container Styles */
+.container {
+    /* outline: 3px solid red; */
+    width: 96%;
+    height: 100%;
+    max-height: 580px;
+    margin: 0 auto;
+    border-radius: 10px;
+    background: #f2e9e1;
+}
+
+/* Header styles */
+header {
+    /* outline: 2px solid red; */
+    text-align: center;
+    margin-bottom: 6px;
+}
+
+h1 {
+    margin: 5px auto;
+    color: #3e2723;
+}
+
+.content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inputbox {
+    padding: 8px;
+    margin: 10px 10px 0 0;
+    border-radius: 5px;
+    border: 1px solid #6d4c41;
+}
+
+.btn {
+    margin-top: 10px;
+    padding: 8px 20px;
+    border: none;
+    background-color: #6d4c41;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #4e342e;
+}
+
+/* main styles */
+main {
+    /* outline: 2px solid yellow; */
+    display: flex;
+    width: 100%;
+}
+
+.manual {
+    /* outline: 2px solid green; */
+    color: #6d4c41;
+    font-weight: bold;
+    width: 300px;
+    flex-basis: 20%;
+    padding: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#checkList {
+    /* outline: 2px solid blue; */
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+}
+
+.todo-none,
+.done-none {
+    /* outline: 3px solid red; */
+    margin: 15px;
+}
+
+.todo-area {
+    /* outline: 2px solid red;  */
+    flex-basis: 70%;
+}
+
+.done-area {
+    /* outline: 2px solid red; */
+    flex-grow: 1;
+}
+
+.todo-text,
+.done-text {
+    /* outline: 3px solid red; */
+    width: 96%;
+    padding: 10px;
+    font-weight: bolder;
+    color: #3e2723;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.todo-style,
+.done-style {
+    /* outline: 3px solid rgb(95, 244, 15); */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 400px;
+    overflow: hidden;
+}
+
+.getItem,
+.finished {
+    /* outline: 2px solid rgb(48, 39, 164); */
+    display: inline-block;
+    margin: 0px 10px 2px 20px;
+    padding: 5px;
+    width: 300px;
+    font-weight: bolder;
+    overflow: hidden;
+    box-shadow: 15px 2px 5px rgba(100, 182, 82, 0.2);
 }
 
 .finished {
-    margin: 0 5px;
+    /* outline: 2px solid red; */
+    margin: 0px 10px 2px 5px;
+    width: 130px;
     color: #bbb;
+    font-style: italic;
+    text-decoration: line-through;
+    box-shadow: 15px 2px 5px rgba(217, 40, 58, 0.2);
+}
+
+.delete {
+    padding: 7px 10px;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    background-color: #6d4c41;
+    overflow: hidden;
+    cursor: pointer;
+    transform: translate(-12px, -12px);
+}
+
+/* Footer Styles */
+footer {
+    /* outline: 2px solid blue; */
+    font-weight: bolder;
+    color: #f2eada;
+    text-align: center;
+    margin-top: 10px;
 }
