--- a/main.css
+++ b/main.css
@@ -15,19 +15,21 @@
 
 .backlayout {
     /* outline: 10px solid red; */
-    position: relative;
     width: 100vw;
     height: 100vh;
-    background-color: #fff;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('images/tree-woodenDesktop.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: 20% 35%;
+    transition: .4s;
 }
 
 .phone {
-    position: relative;
-    z-index: 1;
     width: 90vw;
     height: 96vh;
     background-color: #3C3C3C;
@@ -50,8 +52,9 @@
 
 #phoneTime {
     font-weight: bold;
-    color: #93FF93;
+    color: #fff;
     margin-left: 1.5rem;
+    transition: .4s;
 }
 
 .icons {
@@ -63,7 +66,7 @@
     /* outline: 3px solid red; */
     width: 3rem;
     height: 1.2rem;
-    background-color: #111;
+    background-color: #333;
     border-radius: 8px;
     transform: translateX(20px);
 }
@@ -72,13 +75,14 @@
     /* outline: 3px solid red; */
     width: 2.6rem;
     height: .9rem;
-    color: #fff;
-    background-color: #93ff93de;
-    border: 2px solid #fff;
+    color: #000;
+    background-color: #fff;
+    border: 2px solid #000;
     border-radius: 6px;
     transform: translate(-24px, 2.5px);
     font-size: 10px;
     padding: 0 0 0 6px;
+    transition: .4s;
 }
 
 /* Container Styles */
@@ -90,20 +94,25 @@
     margin: 0 auto;
     border-radius: 10px;
     background: #f2e9e1;
+    transition: .4s;
 }
 
 /* Header styles */
 header {
     /* outline: 2px solid red; */
-    text-align: center;
-    margin-bottom: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 h1 {
-    margin: 5px auto;
+    margin-top: 5px;
     color: #3e2723;
+    transition: .4s;
 }
 
+/* add & currentDate */
 .content-wrapper {
     display: flex;
     justify-content: center;
@@ -114,7 +123,8 @@ h1 {
     padding: 8px;
     margin: 10px 10px 0 0;
     border-radius: 5px;
-    border: 1px solid #6d4c41;
+    border: 2px solid #6d4c41;
+    transition: .4s;
 }
 
 .btn {
@@ -125,10 +135,38 @@ h1 {
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
+    transition: .4s;
 }
 
 .btn:hover {
     background-color: #4e342e;
+}
+
+/* switch */
+.switchArea,
+.toggle {
+    /* outline: 3px solid blue; */
+    width: 80px;
+    height: 20px;
+    border-radius: 100px;
+    user-select: none;
+    cursor: pointer;
+}
+
+.switchArea {
+    margin: 10px 0 0 10px;
+    background: #bbb;
+    opacity: .6;
+    transition: background-color 0.3s;
+    box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.toggle {
+    width: 46px;
+    background-color: #f2e9e1;
+    outline: 1px solid rgba(78, 52, 46, 0.6);
+    box-shadow: 0 2px 15px rgba(0, 0, 0, .15);
+    transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
 }
 
 /* main styles */
@@ -144,8 +182,10 @@ main {
     color: #6d4c41;
     font-weight: bold;
     flex-basis: 20%;
+    margin-left: 10px;
     padding: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: .4s;
 }
 
 #checkList {
@@ -154,16 +194,19 @@ main {
     flex-grow: 1;
     justify-content: center;
     width: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .nonetext {
-    padding: 10px;
+    color: #6d4c41;
+    padding: 10px 20px;
+    transition: .4s;
 }
 
 .todo-area {
     /* outline: 2px solid red; */
-    flex-basis: 70%;
+    flex-basis: 65%;
+    margin-right: 20px;
 }
 
 .done-area {
@@ -174,11 +217,12 @@ main {
 .todo-text,
 .done-text {
     /* outline: 3px solid red; */
-    width: 96%;
-    padding: 5px;
+    width: 100%;
+    padding: 5px 0 5px 15px;
     font-weight: bolder;
     color: #3e2723;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: .4s;
 }
 
 .todo-style,
@@ -189,39 +233,42 @@ main {
     flex-direction: column;
     height: 400px;
     overflow: hidden;
+    transition: .4s;
 }
 
 .getItem,
 .finished {
     /* outline: 2px solid rgb(48, 39, 164); */
     display: inline-block;
-    margin: 5px 10px 2px 2px;
+    margin: 5px 10px 2px 5px;
     padding: 5px;
     width: 300px;
     height: 32px;
     font-weight: bolder;
     overflow: hidden;
-    box-shadow: 15px 2px 5px rgba(100, 182, 82, 0.2);
+    box-shadow: 15px 2px 5px rgba(112, 212, 89, 0.317);
+    transition: .4s;
 }
 
 .finished {
-    margin: 5px 10px 2px 2px;
-    width: 120px;
+    /* outline: 1px solid red; */
+    width: 130px;
     color: #bbb;
     font-style: italic;
     text-decoration: line-through;
+    margin: 5px 5px 2px 10px;
     box-shadow: 15px 2px 5px rgba(217, 40, 58, 0.2);
 }
 
 .delete {
-    padding: 7.5px 10px;
+    padding: 7px 10px;
     color: #fff;
     border: none;
     border-radius: 5px;
     background-color: #6d4c41;
     overflow: hidden;
     cursor: pointer;
-    transform: translate(-12px, -12px);
+    transform: translate(-12px, -13px);
 }
 
 /* Footer Styles */
@@ -232,3 +279,123 @@ footer {
     text-align: center;
     margin-top: 10px;
 }
+
+
+/* -------- Switch Styles ------------*/
+[type="checkbox"] {
+    display: none;
+}
+
+/* Toggle */
+[type="checkbox"]:checked+.app .toggle {
+    transform: translateX(70%);
+    background-color: #34323D;
+}
+
+/* App */
+[type="checkbox"]:checked+.app .backlayout {
+    background-image: url('images/night-woodenDesktop.png');
+    background-position: cover;
+}
+
+[type="checkbox"]:checked+.app .phone {
+    border: 3px solid #93FF93;
+}
+
+[type="checkbox"]:checked+.app #phoneTime {
+    color: #93FF93;
+}
+
+[type="checkbox"]:checked+.app .battery {
+    background: #93ff93;
+    color: #fff;
+    border: 2px solid #Fff;
+}
+
+[type="checkbox"]:checked+.app .container {
+    background: #1e1f26;
+    color: #52f9ff;
+}
+
+[type="checkbox"]:checked+.app h1 {
+    color: #eee;
+}
+
+[type="checkbox"]:checked+.app .inputbox {
+    color: #fff;
+    background: black;
+    border: 2px solid #205375;
+}
+
+[type="checkbox"]:checked+.app .inputbox:focus {
+    border: 2px solid #52f9ff;
+}
+
+[type="checkbox"]:checked+.app .btn {
+    background-color: #205375;
+}
+
+[type="checkbox"]:checked+.app .btn:hover {
+    background-color: #96ded1;
+}
+
+[type="checkbox"]:checked+.app .switchArea {
+    background-color: #bbb;
+    opacity: .4;
+}
+
+[type="checkbox"]:checked+.app .manual {
+    background: #333;
+    color: #C0C0C0;
+    margin-left: 10px;
+}
+
+[type="checkbox"]:checked+.app .todo-text {
+    background: #205375;
+    color: #fff;
+}
+
+[type="checkbox"]:checked+.app .done-text {
+    background: #205375;
+    color: #fff;
+}
+
+[type="checkbox"]:checked+.app .todo-area {
+    background: #333;
+}
+
+[type="checkbox"]:checked+.app .done-area {
+    background: #333;
+}
+
+[type="checkbox"]:checked+.app .nonetext {
+    color: #fff;
+}
+
+[type="checkbox"]:checked+.app .toggle {
+    background: #0f0e0e;
+    outline: 1px solid rgba(255, 255, 255, .6)
+}
+
+[type="checkbox"]:checked+.app .getItem {
+    background: #333;
+    box-shadow: none;
+    border-bottom: 2px solid #205375;
+}
+
+
+[type="checkbox"]:checked+.app .finished {
+    background: #333;
+    box-shadow: none;
+    border-bottom: 2px solid rgba(255, 0, 0, .2);
+}
+
+[type="checkbox"]:checked+.app .delete {
+    background: #205375;
+}
+
+[type="checkbox"]:checked+.app footer {
+    color: #96ded1;
+}
+
+/* background: linear-gradient(40deg, #8983F7, #A3DAFB 70%); */
