--- a/main.css
+++ b/main.css
@@ -89,7 +89,6 @@
 .container {
     /* outline: 3px solid red; */
     width: 96%;
-    height: 100%;
     max-height: 580px;
     margin: 0 auto;
     border-radius: 10px;
@@ -164,7 +163,7 @@ h1 {
 .toggle {
     width: 46px;
     background-color: #f2e9e1;
-    outline: 1px solid rgba(78, 52, 46, 0.6);
+    outline: 1px solid #6d4c41;
     box-shadow: 0 2px 15px rgba(0, 0, 0, .15);
     transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
 }
@@ -174,6 +173,7 @@ main {
     /* outline: 2px solid yellow; */
     display: flex;
     width: 100%;
+    height: 450px;
     padding: 0 20px;
 }
 
@@ -184,7 +184,7 @@ main {
     flex-basis: 20%;
     margin-left: 10px;
     padding: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: .4s;
 }
 
@@ -194,7 +194,9 @@ main {
     flex-grow: 1;
     justify-content: center;
     width: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 440px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
 }
 
 .nonetext {
@@ -203,10 +205,18 @@ main {
     transition: .4s;
 }
 
+.todo-area,
+.done-area,
+.manual {
+    outline: 2px solid #6d4c41;
+    height: 440px;
+    border-radius: 12px;
+}
+
 .todo-area {
     /* outline: 2px solid red; */
     flex-basis: 65%;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .done-area {
@@ -220,7 +230,10 @@ main {
     width: 100%;
     padding: 5px 0 5px 15px;
     font-weight: bolder;
-    color: #3e2723;
+    color: #f2e9e1;
+    background: #6d4c41;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: .4s;
 }
@@ -228,10 +241,10 @@ main {
 .todo-style,
 .done-style {
     /* outline: 3px solid rgb(95, 244, 15); */
+    height: 400px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    height: 400px;
     overflow: hidden;
     transition: .4s;
 }
@@ -240,7 +253,7 @@ main {
 .finished {
     /* outline: 2px solid rgb(48, 39, 164); */
     display: inline-block;
-    margin: 5px 10px 2px 5px;
+    margin: 5.5px 10px 2px 5px;
     padding: 5px;
     width: 300px;
     height: 32px;
@@ -253,10 +266,10 @@ main {
 .finished {
     /* outline: 1px solid red; */
     width: 130px;
+    margin: 5.5px 5px 2px 15px;
     color: #bbb;
     font-style: italic;
     text-decoration: line-through;
-    margin: 5px 5px 2px 10px;
     box-shadow: 15px 2px 5px rgba(217, 40, 58, 0.2);
 }
 
@@ -344,10 +357,15 @@ footer {
     opacity: .4;
 }
 
+[type="checkbox"]:checked+.app .toggle {
+    background: #0f0e0e;
+    outline: 1px solid #205375;
+}
+
 [type="checkbox"]:checked+.app .manual {
     background: #333;
     color: #C0C0C0;
-    margin-left: 10px;
+    outline: 2px solid #205375;
 }
 
 [type="checkbox"]:checked+.app .todo-text {
@@ -361,20 +379,17 @@ footer {
 }
 
 [type="checkbox"]:checked+.app .todo-area {
+    outline: 2px solid #205375;
     background: #333;
 }
 
 [type="checkbox"]:checked+.app .done-area {
+    outline: 2px solid #205375;
     background: #333;
 }
 
 [type="checkbox"]:checked+.app .nonetext {
     color: #fff;
-}
-
-[type="checkbox"]:checked+.app .toggle {
-    background: #0f0e0e;
-    outline: 1px solid rgba(255, 255, 255, .6)
 }
 
 [type="checkbox"]:checked+.app .getItem {
