--- a/main.css
+++ b/main.css
@@ -781,3 +781,78 @@ main {
         padding: 10px;
     }
 }
+
+@media (min-width: 992px) and (max-width: 1200px) {
+    h1 {
+        font-size: 28px;
+    }
+
+    .inputbox {
+        padding: 4px;
+        margin: 0 10px 0 0;
+    }
+
+    .btn {
+        margin-top: 0px;
+        padding: 5px 15px;
+    }
+
+    .switchArea {
+        margin: 0 0 0 15px;
+    }
+
+    [type="checkbox"]:checked+.app .toggle {
+        transform: translateX(75%);
+    }
+
+    main {
+        /* outline: 2px solid yellow; */
+        height: 476px;
+    }
+
+    .todo-area,
+    .done-area,
+    .manual {
+        /* outline: 3px solid green; */
+        height: 460px;
+    }
+
+    .manual {
+        font-size: 14px;
+        margin-left: 15px;
+    }
+
+    .todo-area {
+        flex-basis: 60%;
+        margin-right: 15px;
+    }
+
+    .done-area {
+        flex-grow: 1;
+    }
+
+    .todo-style,
+    .done-style {
+        /* outline: 3px solid rgb(95, 244, 15); */
+        height: 425px;
+        flex-wrap: nowrap;
+    }
+
+    .getItem,
+    .finished {
+        /* outline: 2px solid rgb(48, 39, 164); */
+        margin: 5.5px 10px 5px 20px;
+        width: 80%;
+        box-shadow: 5px 5px 3px rgba(112, 212, 89, 0.2);
+    }
+
+    .finished {
+        width: 70%;
+        margin: 5.5px 0px 5px 20px;
+        box-shadow: 0px 4px 3px rgba(217, 40, 58, 0.2);
+    }
+
+    .delete {
+        transform: translate(-12px, -15px);
+    }
+}
