--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@
         "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
+body {
+    background-color: #f2e9e1;
+}
+
 .backlayout {
     /* outline: 10px solid red; */
     width: 100vw;
@@ -28,7 +32,7 @@
 
 .phone {
     width: 90vw;
-    height: 96vh;
+    height: 670px;
     background-color: #3C3C3C;
     border: 3px solid green;
     border-radius: 40px;
@@ -73,7 +77,7 @@
     width: 96%;
     margin: 0 auto;
     border-radius: 10px;
-    background: #f2e9e1;
+    background-color: #f2e9e1;
     transition: .4s;
 }
 
@@ -130,18 +134,19 @@ h1 {
     height: 20px;
     border-radius: 100px;
     user-select: none;
-    cursor: pointer;
+
 }
 
 .switchArea {
     margin: 10px 0 0 10px;
-    background: #bbb;
+    background-color: #bbb;
     opacity: .6;
     transition: background-color 0.3s;
     box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 .toggle {
+    cursor: pointer;
     width: 46px;
     background-color: #f2e9e1;
     outline: 1px solid #6d4c41;
@@ -210,7 +215,7 @@ main {
     padding: 5px 0 5px 15px;
     font-weight: bolder;
     color: #f2e9e1;
-    background: #6d4c41;
+    background-color: #6d4c41;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     transition: .4s;
@@ -271,6 +276,10 @@ main {
     padding: 10px;
 }
 
+.darkColor {
+    background-color: #1e1f26;
+}
+
 /* -------- Switch Styles ------------*/
 [type="checkbox"] {
     display: none;
@@ -279,7 +288,7 @@ main {
 /* Toggle */
 [type="checkbox"]:checked+.app .toggle {
     transform: translateX(75%);
-    background: #0f0e0e;
+    background-color: #0f0e0e;
     outline: 1px solid #205375;
 }
 
@@ -298,14 +307,13 @@ main {
 }
 
 [type="checkbox"]:checked+.app .battery {
-    background: #93ff93;
+    background-color: #93ff93;
     color: #fff;
     border: 2px solid #Fff;
 }
 
 [type="checkbox"]:checked+.app .container {
-
-    background: #1e1f26;
+    background-color: #1e1f26;
     color: #52f9ff;
 }
 
@@ -315,7 +323,7 @@ main {
 
 [type="checkbox"]:checked+.app .inputbox {
     color: #fff;
-    background: black;
+    background-color: black;
     border: 2px solid #205375;
 }
 
@@ -337,21 +345,21 @@ main {
 }
 
 [type="checkbox"]:checked+.app .manual {
-    background: #333;
+    background-color: #333;
     color: #cccccc;
     outline: 2px solid #205375;
 }
 
 [type="checkbox"]:checked+.app .todo-text,
 [type="checkbox"]:checked+.app .done-text {
-    background: #205375;
+    background-color: #205375;
     color: #fff;
 }
 
 [type="checkbox"]:checked+.app .todo-area,
 [type="checkbox"]:checked+.app .done-area {
     outline: 2px solid #205375;
-    background: #333;
+    background-color: #333;
 }
 
 [type="checkbox"]:checked+.app .nonetext {
@@ -360,7 +368,7 @@ main {
 
 [type="checkbox"]:checked+.app .getItem,
 [type="checkbox"]:checked+.app .finished {
-    background: #333;
+    background-color: #333;
     box-shadow: none;
     border-bottom: 2px solid #205375;
 }
@@ -370,7 +378,7 @@ main {
 }
 
 [type="checkbox"]:checked+.app .delete {
-    background: #205375;
+    background-color: #205375;
 }
 
 [type="checkbox"]:checked+.app .footer-text {
@@ -383,12 +391,12 @@ main {
         height: 100%;
         display: block;
         background-image: none;
-        background: #f2e9e1;
+        background-color: #f2e9e1;
     }
 
     [type="checkbox"]:checked+.app .backlayout {
         background-image: none;
-        background: #1e1f26;
+        background-color: #1e1f26;
     }
 
     .phone {
@@ -462,7 +470,7 @@ main {
     .todo-area,
     .done-area {
         /* outline: 2px solid red; */
-        height: 100%;
+        height: 570px;
     }
 
     .todo-area {
@@ -516,12 +524,12 @@ main {
         height: 100%;
         display: block;
         background-image: none;
-        background: #f2e9e1;
+        background-color: #f2e9e1;
     }
 
     [type="checkbox"]:checked+.app .backlayout {
         background-image: none;
-        background: #1e1f26;
+        background-color: #1e1f26;
     }
 
     .phone {
@@ -597,7 +605,7 @@ main {
     .todo-area,
     .done-area {
         /* outline: 2px solid red; */
-        height: 100%;
+        height: 570px;
     }
 
     .todo-area {
@@ -651,12 +659,12 @@ main {
         height: 100%;
         display: block;
         background-image: none;
-        background: #f2e9e1;
+        background-color: #f2e9e1;
     }
 
     [type="checkbox"]:checked+.app .backlayout {
         background-image: none;
-        background: #1e1f26;
+        background-color: #1e1f26;
     }
 
     .phone {
@@ -734,7 +742,7 @@ main {
     .todo-area,
     .done-area {
         /* outline: 2px solid red; */
-        height: 100%;
+        height: 555px;
     }
 
     .todo-area {
@@ -749,7 +757,7 @@ main {
     .todo-style,
     .done-style {
         /* outline: 3px solid rgb(95, 244, 15); */
-        height: 523px;
+        height: 525px;
         flex-wrap: nowrap;
         overflow: auto;
     }
